Pie chart for % of Total Rides by City Type

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54d0a7eb",
+   "id": "65bdc1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3693726",
+   "id": "ae112e01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a669195",
+   "id": "c1e52881",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b900f043",
+   "id": "c690b3b2",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0664163f",
+   "id": "899556a8",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "066b8f33",
+   "id": "0f082269",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5e463b62",
+   "id": "6afde3e1",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4b1f466f",
+   "id": "4c2373f3",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56a2af3c",
+   "id": "8efedd51",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "231cf166",
+   "id": "b24ddc19",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d694d2a",
+   "id": "5d309563",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "13885ba2",
+   "id": "fe697e94",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "813e9443",
+   "id": "8d812999",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fb7d623c",
+   "id": "f96f9097",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7c187413",
+   "id": "d206787d",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1050c82a",
+   "id": "ae3e3175",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1b964896",
+   "id": "abcfba5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7d67b4e2",
+   "id": "9da5a782",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "928e70ac",
+   "id": "59b1763d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a04a72f1",
+   "id": "4294cbd7",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "92bbb312",
+   "id": "18dfb279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fe8f5891",
+   "id": "2801d9bc",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6f19100e",
+   "id": "0e73292b",
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8ff57234",
+   "id": "51a0ce81",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "701a7ff5",
+   "id": "dacf4ed1",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "47370fcd",
+   "id": "cc6774c4",
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ba106d37",
+   "id": "066440bf",
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "24d55f65",
+   "id": "340c6145",
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f2f0c788",
+   "id": "dcc98441",
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2c528d3d",
+   "id": "56060a20",
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8404c3f6",
+   "id": "e25ecf0e",
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "76a28dcf",
+   "id": "f2eecf91",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a6100dfa",
+   "id": "ee9af0ab",
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dbe979d7",
+   "id": "92d36ad0",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "77e35a76",
+   "id": "041caee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,7 +1698,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "229ded4d",
+   "id": "e9d5ec1b",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "59d09c95",
+   "id": "07c461d3",
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "be7d12a6",
+   "id": "e7d787ac",
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1782,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "927779b8",
+   "id": "7f823b13",
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "89dc8d70",
+   "id": "9aa01b6c",
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1838,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e87a7db8",
+   "id": "044392f1",
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "adf640be",
+   "id": "5c02c0c8",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "23e352d2",
+   "id": "7ed7183d",
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1920,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "76f4c555",
+   "id": "e2c84e51",
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ccfefb70",
+   "id": "7f79fb01",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f53d68a0",
+   "id": "6738f8b9",
    "metadata": {},
    "outputs": [
     {
@@ -2003,7 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "28c62fb6",
+   "id": "c0c46696",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2a9dae20",
+   "id": "7b8b55f5",
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7f83c191",
+   "id": "6e4f3d3a",
    "metadata": {},
    "outputs": [
     {
@@ -2085,7 +2085,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "01e79f23",
+   "id": "aabae141",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5b893aa6",
+   "id": "fdf84d13",
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6675756d",
+   "id": "e6067952",
    "metadata": {},
    "outputs": [
     {
@@ -2179,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "c50c0da3",
+   "id": "ad0b61bd",
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "5b3fc9ca",
+   "id": "bbab6166",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7e9ef5c0",
+   "id": "ccfcf2ef",
    "metadata": {},
    "outputs": [
     {
@@ -2317,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ee54d2a8",
+   "id": "e8ffc7c3",
    "metadata": {},
    "outputs": [
     {
@@ -2376,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "9fc9caca",
+   "id": "00835099",
    "metadata": {},
    "outputs": [
     {
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "25b685dc",
+   "id": "9d22a839",
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "dff30cff",
+   "id": "29463714",
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "928eda7e",
+   "id": "37f3fe32",
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a1835539",
+   "id": "0cba3c6c",
    "metadata": {},
    "outputs": [
     {
@@ -2623,7 +2623,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1fd81a9f",
+   "id": "b0c30508",
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fd2f1d26",
+   "id": "c3d75121",
    "metadata": {},
    "outputs": [
     {
@@ -2673,7 +2673,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "dcf4360f",
+   "id": "1b804399",
    "metadata": {},
    "outputs": [
     {
@@ -2700,7 +2700,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "674293b6",
+   "id": "cf20f269",
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2727,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "87b641ed",
+   "id": "35e300fd",
    "metadata": {},
    "outputs": [
     {
@@ -2763,8 +2763,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "id": "09da5196",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of rides for each city type.\n",
+    "ride_percents = 100 * pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"] / pyber_data_df[\"ride_id\"].count()\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d767365c",
+   "id": "e96efd29",
    "metadata": {},
    "outputs": [],
    "source": []
